[project]
name = "pipelines"
version = "0.1.0"
description = "Kubeflow pipelines for RAG"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "kfp==2.10.1",
    "kfp[kubernetes]==2.10.1",
    "boto3==1.35.54",
    "tqdm==4.66.1",
    "docling[vlm]==2.31.0",
    "torch==2.2.2",
    "pymilvus==2.5.8",
]
